fix margins on mobile

--- a/style.css
+++ b/style.css
@@ -738,7 +738,8 @@ footer img{
   }
 
   .project-body-text{
-    margin: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 
 
